# nn-cpp

./: .gitignore  NOTES.org  README.md
demos/demo-1/: CMakeLists.txt
demos/demo-1/src/: chart.cpp  controls.cpp  controls.hpp  main.cpp  trainer.cpp  trainer.hpp
demos/demo-2/: CMakeLists.txt
demos/demo-2/src/: chart.cpp  chart.hpp  controls.cpp  controls.hpp  main.cpp  trainer.cpp  trainer.hpp
demos/demo-3/: CMakeLists.txt
demos/demo-3/src/: chart.cpp  chart.hpp  controls.cpp  controls.hpp  main.cpp  trainer.cpp  trainer.hpp
nn/: CMakeLists.txt
nn/include/: activation_func.hpp  layer.hpp  loss_func.hpp  mat.hpp  model.hpp  nn.hpp  optimizer.hpp  rand.hpp  utils.hpp
nn/mat-c/: CMakeLists.txt
nn/mat-c/include/: mat.h
nn/mat-c/src/: mat.c  mat_mul.c  mem.c
nn/mat-c/test/: test_mat.cpp
nn/src/: activation_func.cpp  layer.cpp  loss_func.cpp  mat.cpp  model.cpp  nn.cpp  optimizer.cpp  rand.cpp  utils.cpp
nn/test/: test_activation_func.cpp  test_layer.cpp  test_loss_func.cpp  test_mat.cpp  test_nn.cpp  test_optimizer.cpp  test_shape.cpp  test_utils.cpp
